[fix] align to center

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body, textarea {
     font-family: Arial, sans-serif;
     overflow-x: auto;
     overflow-y: hidden;
+    text-align: center;
 }
 
 textarea {
